<resources>
    <string name="app_name">TelegramTransport</string>

    <string name="phone">Phone</string>
    <string name="code">Telegram code</string>
    <string name="save">Save</string>
    <string name="close">Close</string>

    <string name="minimize">minimize</string>


    <string name="send_code">Send this code from your main device \nfrom telegram to the registration number of the detector</string>

    <string name="phone_need">Enter the phone number in the international format.\nUse the wrong phone number to which telegrams are registered!</string>

    <string name="code_need">Enter the code for the telegrams.\nHe will come in sms or another detector delta (or telegram) to the registration number</string>


    <string name="password">Password</string>

    <string name="playmarket_link">\nIf you like the program, rate it
        \nhttps://play.google.com/store/apps/details?id=d.rock.deltat
        \nIf you have any questions or suggestions, write
        \na.rock.developer@gmail.com
    </string>


    <string name="use_to_send">Use to send</string>
    <string name="text">text</string>
    <string name="file">file</string>
    <string name="photo">file</string>
    <string name="location">location</string>

    <string name="auto_start">Auto start</string>
    <string name="reset_registration">reset registration</string>

    <string name="name">name</string>

</resources>
