<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_to_send"
            />

        <CheckBox
            android:id="@+id/cbText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:onClick="onClick"
            />

        <CheckBox
            android:id="@+id/cbPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:onClick="onClick"
            />

        <CheckBox
            android:id="@+id/cbFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:onClick="onClick"
            />

        <CheckBox
            android:id="@+id/cbLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:onClick="onClick"
            />

        <CheckBox
            android:id="@+id/cbAutoStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_start"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/btClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:onClick="onCloseClick"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>