<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="30dp"
            />

        <TextView
            android:id="@+id/tvRegInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"

            />

        <LinearLayout
            android:id="@+id/llPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etPhoneNum"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="phone"

                />
            <Button
                android:id="@+id/btNext1"
                android:text=">>"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="ConnectClick" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                />
            <Button
                android:id="@+id/btNext2"
                android:text=">>"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="ConnectClick"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCodeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/chkCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="64sp"
                android:layout_margin="5sp"
                android:textColor="@color/colorRed"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:text="123"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/send_code"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/edPass"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />
            <Button
                android:id="@+id/btPass"
                android:text=">>"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="PasswordClick" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>